[Feature] Set GUI only openable with castles.openGUI permission.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -57,3 +57,6 @@ permissions:
   castles.bloodpoints:
     description: Blood Points command
     default: op
+  castles.openGUI:
+    description: Open GUI with interaction
+    default: op
