--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -69,6 +69,9 @@ permissions:
   castles.bloodpoints:
     description: Blood Points command
     default: op
-  castles.openGUI:
+  castles.GUI:
     description: Open GUI with interaction
+    default: true
+  castles.GUI.expand:
+    description: Open expand GUI
     default: op
