[Feature] Added Destroy Castle button.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -75,3 +75,6 @@ permissions:
   castles.GUI.expand:
     description: Open expand GUI
     default: op
+  castles.GUI.destroy:
+    description: Destroy castle with GUI
+    default: op
